--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,17 @@
     margin-bottom: 5px;
 }
 
+.title-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.title-row h2 {
+    display: inline-block;
+}
+
 .wordcloud-settings {
+    display: none;
     position: absolute;
     top: 35px;
     right: 10px;
@@ -66,4 +76,45 @@
 
 .dirs-item span {
     color: var(--text-error);
+}
+
+
+.wordcloud-svg-container {
+    width: 100%;
+    height: 600px;
+    border: 1px solid var(--background-modifier-border);
+    margin-top: 10px;
+    position: relative;
+}
+.svg-word {
+    font-family: sans-serif;
+    text-anchor: middle;
+}
+.list-word {
+    cursor: pointer;
+}
+
+.input-wrapper {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+.input-el {
+    flex: 1;
+    margin-right: 5px;
+}
+.remove-button {
+    margin-left: 8px;
+    cursor: pointer;
+}
+
+
+.setting-input-s {
+    height: 70px;
+}
+.setting-input-m {
+    height: 100px;
+}
+.setting-input-b {
+    height: 130px;
 }
